--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -5,21 +5,23 @@
 <i> Friday June 26, 1987 </i>
 <p/>
 I was 25 and testosterone practically controlled the weather.&ensp;
-<br/>&emsp;Earlier that year some old friends from Minnesota had come out to California
+<br/>&emsp;In February, some old friends from Minnesota had come out to California
 and I had found us a house to rent.&ensp;They all brought motorcycles, and I had
 just begun a personal campaign of racing on the weekends.&ensp;One of my friends
 was an aircraft mechanic and we rebuilt the engines on everything we had
 multiple times because we blew them up multiple times, my race bike virtually
-every other week.&ensp;On the rare occasions I wasn't rebuilding that bike during the week
+every other week.&ensp;
+<br/>&emsp;On the rare occasions I wasn't rebuilding that bike during the week
 I was riding it to work to determine if the latest tune had improved power.&ensp;
 I'd attach a mirror, but no turn signals, license plate, or lights.&ensp;
 Track tires so sticky they'd collect cigarette butts and lotto scratchers.&ensp;Loud exhaust.&ensp;
 Blood red bodywork and leather onesie to match, both with black asphalt scuffs.&ensp;
-Vehicle performance is nothing, of course, without skill and knowledge of the course.&ensp;
+I was a hooligan with a teleportation device.&ensp;
+But vehicle performance is nothing without skill and knowledge of the course, and I worked on those.&ensp;
 There were business parks all around with winding streets, curving lots packed with cars,
 a few loading docks, and branching jogging paths.&ensp;Two smart moves would put you out of sight,
-and I ran from police routinely with perfect success.&ensp;
-<br/>&emsp;That afternoon I left work early.&ensp;Hwy 237 is a dozen straight miles
+and I embarrassed police as a matter of routine.&ensp;
+<br/>&emsp;That Friday afternoon I left work early.&ensp;Hwy 237 is eight straight miles
 with eight stop lights.&ensp;Ideal for practicing my launch technique and 
 listening for unacceptable engine noises at redline.&ensp;The house was at the end of Knights Bridge Road.&ensp;
 No cul du sac, just a fence with a few acres of apple trees on the other side.&ensp;Nice day.&ensp;Very quiet.&ensp;
@@ -228,7 +230,7 @@ and let her collapse into the passenger seat where, eyes closed and skin dewy, s
 <br/>&emsp;As I was shuffling my portfolio, the paramedics 
 rolled Sal out, not in a bag.&ensp;Walking close behind was Dee, in a hoodie and black sweat pants.&ensp;
 I realized that was how she was always dressed.&ensp;
-She was intently chewing on the side of her thumb, pausing every couple of seconds to inspect her work.&ensp;
+She was intently nibbling along the inside of her thumb, pausing every couple of seconds to inspect her work.&ensp;
 Two paramedics pushed the gurney 
 into their rig, and then one of them extended a hand to help Dee up and in.&ensp;
 She wiped her spit on her pant leg first.&ensp;
