--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -22,7 +22,7 @@ There were business parks all around with winding streets, curving lots packed w
 a few loading docks, and branching jogging paths.&ensp;Two smart moves would put you out of sight,
 and I embarrassed police as a matter of routine.&ensp;
 <br/>&emsp;That Friday afternoon I left work early.&ensp;Hwy 237 is eight straight miles
-with eight stop lights.&ensp;Ideal for practicing my launch technique and 
+with five stop lights.&ensp;Ideal for practicing my launch technique and 
 listening for unacceptable engine noises at redline.&ensp;The house was at the end of Knights Bridge Road.&ensp;
 No cul du sac, just a fence with a few acres of apple trees on the other side.&ensp;Nice day.&ensp;Very quiet.&ensp;
 Most driveways were still empty.&ensp;I kept the revs down for the stay-at-homes enjoying their soaps.&ensp;
