--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -33,9 +33,9 @@ I was pushing the bike into the garage when I heard it.&ensp;
 <br/>&emsp;It was a sound Bev had told me she heard sometimes in the afternoons when she was
 sunbathing in the back yard.&ensp;A woman crying, begging, terrified.&ensp;
 I never asked Bev why she didn't call 9-1-1.&ensp;She was cop-phobic, got both good and bad twitchy 
-when I drove fast with her.&ensp;I figured she had warrants.&ensp;She had few
-possessions.&ensp;Traveled light, she said.&ensp;I never saw ID and wondered if I knew her real name.&ensp;
-But the sound was real, primal, and couldn't have been far.&ensp;Not coming from the orchard, so somewhere easier.&ensp;
+when I drove fast with her.&ensp;I figured she had warrants.&ensp;Her possessions fit in a small duffel.&ensp;
+Traveled light, she said.&ensp;I never saw ID and wondered if I knew her real name.&ensp;
+<br/>&emsp;But the sound was real, and primal, and couldn't have been far.&ensp;Not coming from the orchard, so somewhere easier.&ensp;
 My helmet was on the bike's tank, gloves inside, but my crystalized course of action 
 required bare hands.&ensp;I had never worn gloves while holding a gun.&ensp;
 <br/>&emsp;In my housemate's room I did a quick search for his Glock.&ensp;I liked it.&ensp;At the range
