--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -147,7 +147,7 @@ but I couldn't be sure.&ensp;Saw no beer foam in the ice.&ensp;
 <br/>&emsp;I went around
 back and wheeled out the Weber and filled it with charcoal.&ensp;I gave it a very liberal dousing
 of lighter fluid and then stepped back to where I was out of the fume zone and struck a
-wooden match, tossing it in the same gesture à la my dad.&ensp;Got a good fireball that rattled the 
+wooden match, tossing it in the same gesture &agrave; la my dad.&ensp;Got a good fireball that rattled the 
 hanging utensiles.&ensp;I wondered if I was too wired to have sex one last time.&ensp;
 <br/>&emsp;In the kitchen Bev was slapping hamburger into patties.&ensp;I turned her around and boosted
 her up onto the counter.&ensp;Ice cream.&ensp;Probably a Frosty from Wendy's.&ensp;She pulled my shirt
