--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -121,7 +121,7 @@ striped handle.&ensp;We used it mostly as a pry bar.&ensp;I stuck the end in the
 the house, the living room, our sliding glass doors, into the brown grass of the back yard.&ensp;
 After putting a quick eye to the biggest knothole in the gray redwood fence,
 I cranked back and threw the Colt as far into the orchard
-as I possibly could.&ensp;Then I walked back to the garage and put the screwdriver away, binned the rag,
+as I possibly could.&ensp;I returned to the garage and put the screwdriver away, binned the rag,
 scrubbed my hands and leather sleeve with a fresh rag spritzed with grease remover, binned it, 
 sat on the step leading inside and unzipped my boots, unzipped the cuffs of my leathers and 
 began peeling them off.&ensp;I was mostly out when I heard my Firebird, about four blocks away.&ensp;
@@ -146,7 +146,7 @@ There may have been a brief high-pitched squeal, like nails being pulled from wo
 but I couldn't be sure.&ensp;Saw no beer foam in the ice.&ensp;
 <br/>&emsp;I went around
 back and wheeled out the Weber and filled it with charcoal.&ensp;I gave it a very liberal dousing
-of lighter fluid and then stepped back to where I was out of the fume zone and struck a
+of lighter fluid, stepped out of the fume zone and struck a
 wooden match, tossing it in the same gesture &agrave; la my dad.&ensp;Got a good fireball that rattled the 
 hanging utensiles.&ensp;I wondered if I was too wired to have sex one last time.&ensp;
 <br/>&emsp;In the kitchen Bev was slapping hamburger into patties.&ensp;I turned her around and boosted
@@ -154,7 +154,7 @@ her up onto the counter.&ensp;Ice cream.&ensp;Probably a Frosty from Wendy's.&en
 over my head and wiped her hands on it and tossed it in the sink.&ensp;
 Ready to go, as per.&ensp;Roof, food, weed, TV, no job, an arrangement established the day we met.&ensp;
 She pointed her toes and kicked off her sandals.&ensp;I heard them hit the cabinets and then
-the floor, but then she tensed.&ensp;"Hear that?"&ensp;
+the floor, but in that same instant she tensed.&ensp;"Hear that?"&ensp;
 She turned her head.&ensp;Her hair was cute, short, and ultra fine, and it brushed my nose.&ensp;
 Very pleasant.&ensp;"Wow," she said.&ensp;Then I heard the sirens.&ensp;They weren't just in the 
 neighborhood.&ensp;They were coming up our road.&ensp;Several species.&ensp;Different departments.&ensp;
@@ -234,15 +234,15 @@ She was intently nibbling along the inside of her thumb, pausing every couple of
 Two paramedics pushed the gurney 
 into their rig, and then one of them extended a hand to help Dee up and in.&ensp;
 She wiped her spit on her pant leg first.&ensp;
-Another medic closed the doors, then got behind the wheel.&ensp;The ambulance made a multi-point turn because 
-the fire engine was in the way.&ensp;Then it drove away, lights and siren.&ensp;
+Another medic closed the rear doors and got behind the wheel.&ensp;The ambulance made a multi-point turn because 
+the fire engine was in the way.&ensp;It sped away, lights and siren.&ensp;
 <br/>&emsp;I grabbed a beer.&ensp;
 <br/>&emsp;"What's happening?"&ensp;
 <br/>&emsp;"Sal got brought out of his house on a stretcher.&ensp;Dee went with."&ensp;
 <br/>&emsp;"Shit," Bev said, sidling out of the garage.&ensp;"Wow," hands in her hair, nervous near so many 
 flashing lights.&ensp;I imagined her hair longer, in a mug shot.&ensp;Maybe.&ensp;Wow.&ensp;
 <br/>&emsp;The fire crew left, backing to the cross street and heading off in a different direction
-than they'd come.&ensp;Then an unmarked Crown Vic arrived and a detective went inside.&ensp;
+than they'd come.&ensp;After a few minutes an unmarked Crown Vic arrived and a detective went inside.&ensp;
 I was halfway through my beer when one of my roommates came home.&ensp;Eric parked down by the corner.&ensp;
 Once past the light show he waved and I raised my bottle.&ensp;
 <br/>&emsp;"Holy crap," he said, leaning against the Firebird's door.&ensp;
@@ -258,7 +258,7 @@ If neighbors come, it might seem--"&ensp;
 <br/>&emsp;"If we're careful.&ensp;'S got wheels."&ensp;
 <br/>&emsp;Then Rob came home.&ensp;Then finally Bill.&ensp;A few neighbors.&ensp;No more cops.&ensp;
 <br/>&emsp;We ate burgers in the back yard.&ensp;Beverly drank and smoked and laughed a bit more than usual.&ensp;
-<br/>&emsp;When Bill went inside to get his tin of tobacco, I followed and then led him to the garage
+<br/>&emsp;When Bill went inside to get his tin of tobacco, I followed and led him to the garage
 and closed the door.&ensp;
 <br/>&emsp;"Dude," I said.&ensp;"Got to tell you something."&ensp;
 <br/>&emsp;"Yeah?"&ensp;Wary.&ensp;
@@ -297,7 +297,7 @@ was broken.&ensp;
 <br/>&emsp;"Because, dumbass, the Glock ejects shells.&ensp;With my fingerprints on 'em."&ensp;
 <br/>&emsp;Two on the dot.&ensp;We grabbed a vice and every tool we could find that might successfully
 attack stainless steel and put them in his truck.&ensp;Finding the gun took a half hour with flashlights.&ensp;
-It helped that it was so shiny.&ensp;Bill extracted the shells and pocketed them.&ensp;Then we drove to Alviso, 
+It helped that it was so shiny.&ensp;Bill extracted the shells and pocketed them.&ensp;We drove to Alviso, 
 a weird area at the southern tip of the San Francisco Bay.&ensp;To remove the number we ended up
 using a hammer and punch set.&ensp;After an early bad swing that nearly broke my finger and sent a
 punch flying past his face and out into the weeds, we held the punch in place with locking pliers.&ensp;
@@ -307,11 +307,11 @@ I handed the big screwdriver to him.&ensp;
 <br/>&emsp;"Your gun," I said.&ensp;"Should be you."&ensp;
 <br/>&emsp;"Plus my arms ain't puny."&ensp;He rammed the screwdriver in and out of the barrel for a solid minute.&ensp;
 Either to defeat forensics or make it unusable if found.&ensp;I figured the brackish water would
-help too.&ensp;Then he gave it a good arc and we heard the splash.&ensp;
+help too.&ensp;He gave it a good arc and we heard the splash.&ensp;
 <br/>&emsp;"Nice one, Bill."&ensp;
 <br/>&emsp;"Sure thing.&ensp;Cowboy."&ensp;That stuck for awhile.&ensp;The first few times it seemed loaded with a 
 mix of pride through conspiracy, envy born of naive fantasy, and a faint whiff of latent anger 
-with the potential for idiotic double-edged blackmail.&ensp;But then Beverly rebranded it.&ensp;
+with the potential for idiotic double-edged blackmail.&ensp;But before long Beverly rebranded it.&ensp;
 <br/>&emsp;We waited a week before I bought him a new Colt.&ensp;
 <br/>&emsp;During that week I had butterflies and was mostly useless at work.&ensp;Things were okay with Bev, though.&ensp;
 <br/>&emsp;Friday, we wheeled out the grill as usual and all the neighbors showed.&ensp;The prevailing theories were
