--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -195,7 +195,7 @@ her legs around my waist.&ensp;Feeling walls with one hand I walked to my bedroo
 Next level.&ensp;No tomorrow.&ensp;
 <br/>&emsp;A month prior, coming off the corkscrew at Laguna Seca, through turns 9 and 10 and carrying 
 3rd gear through turn 11 onto the straight heading for the finish, I'd been hyper-aware of
-the rear tire slding a bit.&ensp;The idea each race is to completely use up a set of tires.&ensp;
+the rear tire sliding a bit.&ensp;The idea each race is to completely use up a set of tires.&ensp;
 Otherwise you weren't trying hard enough.&ensp;Tires wore much more toward the edges
 than in the middle due to extra forces when cornering.&ensp;The first few turns could be guesswork,
 especially if there had been a delayed start or you'd misgauged pressure versus ambient temperature.&ensp;
