--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -51,7 +51,7 @@ pointing back toward his house and the green and white cruiser.&ensp;He'd said h
 didn't mind the noise but knew certain neighbors would soon complain.&ensp;He advised we adopt an
 8 p.m. cutoff and also that we introduce ourselves to everyone in a friendly way,
 pass out our phone number so they would be inclined to tell us when enough was enough 
-rather than call the law.&ensp;One of my roommates suggested a BBQ and Sal said that sounded 
+rather than call the law.&ensp;Someone suggested a BBQ and Sal said that sounded 
 like a fine idea.&ensp;So that became the Friday tradition, a weekly bribe.&ensp;
 <br/>&emsp;I sauntered, holding the gun inside the red leather, feeling self-conscious but not as
 stupid as I would have holding the shiny pistol for whoever to see.&ensp;And as I got to Sal's
@@ -200,15 +200,14 @@ Otherwise you weren't trying hard enough.&ensp;Tires wore much more toward the e
 than in the middle due to extra forces when cornering.&ensp;The first few turns could be guesswork,
 especially if there had been a delayed start or you'd misgauged pressure versus ambient temperature.&ensp;
 Given a lap or two, sliding usually became predictable.&ensp;Different for each brand, but learnable.&ensp;
-I had developed a system of counting the number and length of slides.&ensp;
 The Yokohamas I was running that day were good for 113 moderate slides, each side.&ensp;
 Beyond that you were likely riding on exposed cords and the romp could end before the race was over.&ensp;
 There and then, we were at 112 on the left.&ensp;During a slide the loss of traction means the tire is 
-spinning slightly faster than when fully hooked up.&ensp;The tire is also smaller in diameter on edge
-than standing up so that factors in, too.&ensp;The engine was pulling hard for victory,
+spinning slightly faster than when fully hooked up.&ensp;It's also smaller in diameter on edge
+and that factors in, too.&ensp;The engine was pulling hard for victory,
 a thou below redline.&ensp;As I rolled her out of that final turn, up on to the cooler center portion
-of the tire, I heard and felt the hookup.&ensp;It was subtle, a soft grunt, which was good.&ensp;
-A jerk could set everything wobbling.&ensp;Instead, she smoothly started climbing her chain, front tire floating
+of the tire, I heard and felt the hookup.&ensp;It was subtle, a soft grunt, and
+she smoothly started climbing her chain, front tire floating
 higher and higher above the track.&ensp;Body english will let you steer a bit, but I was good with where we were going.&ensp;
 The checkered flag waved, big and flashy, and the front came down and kissed the asphalt, nice and easy.&ensp;
 Personal bests.&ensp;
@@ -225,7 +224,7 @@ The hood had a center ridge that ran from the windshield to the beak-like bumper
 In April, on the afternoon I'd finally gotten the new carburetor properly jetted to let the big motor
 maintain a lumpy idle, around 550 RPM, Bev had perched on the nose of the car and in less than five seconds
 slapped the hood, slid off, and nearly dropped to her knees.&ensp;I'd guided her around, opened the door,
-and let her collapse into the passenger seat where, eyes closed and skin dewy, she'd whispered:  
+and let her collapse into the passenger seat where she'd smiled at me and whispered:  
 "Tap-dancing Christ."&ensp;
 <br/>&emsp;As I was shuffling my portfolio, the paramedics 
 rolled Sal out, not in a bag.&ensp;Walking close behind was Dee, in a hoodie and black sweat pants.&ensp;
@@ -243,7 +242,7 @@ the fire engine was in the way.&ensp;It sped away, lights and siren.&ensp;
 flashing lights.&ensp;I imagined her hair longer, in a mug shot.&ensp;Maybe.&ensp;Wow.&ensp;
 <br/>&emsp;The fire crew left, backing to the cross street and heading off in a different direction
 than they'd come.&ensp;After a few minutes an unmarked Crown Vic arrived and a detective went inside.&ensp;
-I was halfway through my beer when one of my roommates came home.&ensp;Eric parked down by the corner.&ensp;
+I was halfway through my beer when one of my housemates came home.&ensp;Eric parked down by the corner.&ensp;
 Once past the light show he waved and I raised my bottle.&ensp;
 <br/>&emsp;"Holy crap," he said, leaning against the Firebird's door.&ensp;
 <br/>&emsp;"Sal got taken out on a stretcher."&ensp;
