--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -16,14 +16,14 @@ I was riding it to work to determine if the latest tune had improved power.&ensp
 I'd attach a mirror, but no turn signals, license plate, or lights.&ensp;
 Track tires so sticky they'd collect cigarette butts and lotto scratchers.&ensp;Loud exhaust.&ensp;
 Blood red bodywork and leather onesie to match, both with black asphalt scuffs.&ensp;
-I was a hooligan with a teleportation device.&ensp;
+I was, I knew in some eyes, a hooligan with a teleportation device.&ensp;
 But vehicle performance is nothing without skill and knowledge of the course, and I worked on those.&ensp;
-There were business parks all around with winding streets, curving lots packed with cars,
-a few loading docks, and branching jogging paths.&ensp;Two smart moves would put you out of sight,
-and I embarrassed police as a matter of routine.&ensp;
+Oftentimes while evading the police by ducking through a business park or gliding along a bike/jogging path 
+with the engine off, the cat-and-mouse action would strike me as annoying.&ensp;Some associates enjoyed it
+as a game in itself, but to me it was largely a distraction.&ensp;
 <br/>&emsp;That Friday afternoon I left work early.&ensp;Hwy 237 is eight straight miles
 with five stop lights.&ensp;Ideal for practicing my launch technique and 
-listening for unacceptable engine noises at redline.&ensp;The house was at the end of Knights Bridge Road.&ensp;
+feeling for suspicious vibrations.&ensp;The house was at the end of Knights Bridge Road.&ensp;
 No cul du sac, just a fence with a few acres of apple trees on the other side.&ensp;Nice day.&ensp;Very quiet.&ensp;
 Most driveways were still empty.&ensp;I kept the revs down for the stay-at-homes enjoying their soaps.&ensp;
 My driveway, last on the left, was also empty which meant Beverly was out buying groceries for the Friday BBQ.&ensp;
@@ -124,8 +124,8 @@ I cranked back and threw the Colt as far into the orchard
 as I possibly could.&ensp;I returned to the garage and put the screwdriver away, binned the rag,
 scrubbed my hands and leather sleeve with a fresh rag spritzed with grease remover, binned it, 
 sat on the step leading inside and unzipped my boots, unzipped the cuffs of my leathers and 
-began peeling them off.&ensp;I was mostly out when I heard my Firebird, about four blocks away.&ensp;
-<br/>&emsp;Beverly was remarkably deft with the clutch.&ensp;There were three stop signs on our road, two 
+began peeling them off.&ensp;I was mostly out when I heard my Firebird, about three blocks away.&ensp;
+<br/>&emsp;Beverly was remarkably deft with the clutch.&ensp;There were two stop signs on our road, both 
 on an upward slope.&ensp;She didn't stall the engine or spin the tires.&ensp;
 I was slipping on the old pair of tennis shoes I kept in the garage
 when she pulled up.&ensp;The breeze through the house made my sweaty skin prickle.&ensp;She gave the
