--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -48,7 +48,10 @@ On the weekends, he would wheel out his '64 Corvette for the world to admire.&en
 One day not long after our move in when we were all out in the driveway working on my Firebird,
 a '71 with the 455, dialing in a new Holley, Sal had walked up and introduced himself,
 pointing back toward his house and the green and white cruiser.&ensp;He'd said he personally 
-didn't mind the noise but knew certain neighbors would soon complain.&ensp;He advised we adopt an
+didn't mind the noise but knew certain neighbors would soon complain.&ensp;
+Beverly got in the passenger side, lowered the stereo, and did her best to become invisible,
+face turned away, arms folded over her hot pink bikini.&ensp;
+Sal seemed to ignore her, advising we adopt an
 8 p.m. cutoff and also that we introduce ourselves to everyone in a friendly way,
 pass out our phone number so they would be inclined to tell us when enough was enough 
 rather than call the law.&ensp;Someone suggested a BBQ and Sal said that sounded 
