--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -73,7 +73,7 @@ especially if he was jerking off on his bed.&ensp;But hey.&ensp;
 I skipped work for it.&ensp;It was weird being in the front passenger seat,
 and also cramped:  radio gear intruded and three clipboards were Velcroed across the face of the dash.&ensp;
 One held a compilation of BOLOs from agencies all around the Bay.&ensp;
-Smack in the middle of the first page was a sketchy description of me and my bike.&ensp;For a minute
+Smack in the middle of the first page was a sketchy description of a red racing bike.&ensp;For a minute
 I thought he'd tricked me.&ensp;But we just drove around.&ensp;Sal pointed things out.&ensp;Many drivers took 
 their foot off the gas when they noticed the cruiser in their mirror, mostly those going the limit.&ensp;
 Sal approved:  at least they were checking.&ensp;But of those, it was fun to note how many rolled windows 
@@ -223,12 +223,12 @@ but minutes too far now.&ensp;So I hooked the belt loops of her jeans and kissed
 <br/>&emsp;"Won't need to."&ensp;
 <br/>&emsp;Out front, I sat on the fender of the Firebird.&ensp;A nice metallic blue.&ensp;I'd bought Bev panties the same shade
 to commemorate a religious experience.&ensp;
+One afternoon in early April I'd finally gotten the new carburetor properly jetted to let the big motor
+maintain a lumpy idle, around 550 RPM.&ensp;
 The hood had a center ridge that ran from the windshield to the beak-like bumper.&ensp;
-In April, on the afternoon I'd finally gotten the new carburetor properly jetted to let the big motor
-maintain a lumpy idle, around 550 RPM, Bev had perched on the nose of the car and in less than five seconds
-slapped the hood, slid off, and nearly dropped to her knees.&ensp;I'd guided her around, opened the door,
-and let her collapse into the passenger seat where she'd smiled at me and whispered:  
-"Tap-dancing Christ."&ensp;
+I'd just closed it and was gathering tools, enjoying the growl, when Bev perched on the nose of the car.&ensp; 
+Less than five seconds.&ensp;Then she slapped the hood, slid off, and nearly dropped to her knees.&ensp;
+I'd crouched and put both arms around her, not sure, when she kissed my neck and said, "Tap-dancing Christ."&ensp;
 <br/>&emsp;As I was shuffling my portfolio, the paramedics 
 rolled Sal out, not in a bag.&ensp;Walking close behind was Dee, in a hoodie and black sweat pants.&ensp;
 I realized that was how she was always dressed.&ensp;
