--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -227,8 +227,8 @@ One afternoon in early April I'd finally gotten the new carburetor properly jett
 maintain a lumpy idle, around 550 RPM.&ensp;
 The hood had a center ridge that ran from the windshield to the beak-like bumper.&ensp;
 I'd just closed it and was gathering tools, enjoying the growl, when Bev perched on the nose of the car.&ensp; 
-Less than five seconds.&ensp;Then she slapped the hood, slid off, and nearly dropped to her knees.&ensp;
-I'd crouched and put both arms around her, not sure, when she kissed my neck and said, "Tap-dancing Christ."&ensp;
+Less than five seconds.&ensp;Then she'd slapped the hood, slid off, and nearly dropped to her knees.&ensp;
+I'd helped her stand and, still aswoon, she'd said:  "Tap-dancing Christ."&ensp;
 <br/>&emsp;As I was shuffling my portfolio, the paramedics 
 rolled Sal out, not in a bag.&ensp;Walking close behind was Dee, in a hoodie and black sweat pants.&ensp;
 I realized that was how she was always dressed.&ensp;
