--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -180,7 +180,7 @@ He raised it.&ensp;I flashed him a vee.&ensp;
 The light was only a couple of houses down and I let the car ride its idle into the left turn lane.&ensp;
 While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;While she figured out it was a non-retracting affair that needed some fiddling to get straight she said:
-"All the gear..."&ensp;
+"All the gear . . ."&ensp;
 <br/>&emsp;I confirmed:  "Every time.&ensp;Oh, and roll up your window."&ensp;
 <br/>&emsp;I heard the buckle click, and the light went green.&ensp;
 <br/>&emsp;It had taken me a while to figure out that I'm really more interested in cornering than straight line speed.&ensp;
@@ -315,7 +315,7 @@ watching MTV with the cats.&ensp;
 <br/>&emsp;Outside, it was clear there was no car thing.&ensp;
 <br/>&emsp;The coach said to me:  "So.&ensp;Things going well?"&ensp;
 <br/>&emsp;"Yeah."&ensp;
-<br/>&emsp;"Thing is," said my other housemate, Leon's owner, Mr. Fastback, "like, who is she?"&ensp;
+<br/>&emsp;"Thing is," said my other housemate, Leon's owner, Mr. Fastback, "like, who <i>is</i> she?"&ensp;
 <br/>&emsp;"Beverly," I said.&ensp;
 <br/>&emsp;There was a pause.&ensp;I said, "We need some locks on the garage.&ensp;I'll do that."&ensp;
 <br/>&emsp;"When?" he asked.&ensp;"She seems to just <i>be</i> here."&ensp;
@@ -324,14 +324,14 @@ watching MTV with the cats.&ensp;
 <br/>&emsp;I paused again.&ensp;I checked my voice.&ensp;"Well, if we need to establish some rules, we can.&ensp;
 I understand if a fourth person starts staying here, that's a thing."&ensp;
 <br/>&emsp;"Yeah," he snorted.&ensp;
-<br/>&emsp;"So," I said, "I'm prepared to pay a large perentage of rent, if--"&ensp;
+<br/>&emsp;"So," I said, "I'm prepared to pay a larger perentage of rent, if--"&ensp;
 <br/>&emsp;"It's not that," he said.&ensp;"I've got--" and he thumbed toward the garage.&ensp;
 <br/>&emsp;"Well," I said, "she smokes weed like us.&ensp;I don't see her calling the cops."&ensp;
 <br/>&emsp;"But what about friends?"&ensp;
 <br/>&emsp;"Like, thieves?&ensp;I'll admit I don't know her that well.&ensp;But if she starts to act fishy--"&ensp;
 <br/>&emsp;"It'd happen fast," he interrupted.&ensp;"She'll call someone while we're all out, and--"&ensp;
 <br/>&emsp;"Right, so I'll put locks on the doors.&ensp;Today."&ensp;
-<br/>&emsp;The coach had been standing by, all California.&ensp;"So," he asked Mr. Fastback, "will that do it?"&ensp;
+<br/>&emsp;The coach had been standing by, all Californian.&ensp;"So," he asked Mr. Fastback, "will that do it?"&ensp;
 <br/>&emsp;"What about my stereo?"&ensp;
 <br/>&emsp;"Look," I said, "I'll replace anything that goes missing.&ensp;Gosh, these concerns seem to have 
 come up pretty quick.&ensp;I mean, she's only been here one night--"&ensp;
@@ -340,27 +340,27 @@ come up pretty quick.&ensp;I mean, she's only been here one night--"&ensp;
 "Tell you what, guys.&ensp;Let's all go to dinner."&ensp;
 <br/>&emsp;The coach started nodding.&ensp;Dude burned tons of calories in the pool everyday.&ensp;
 <br/>&emsp;I went on:  "She'll be less of an unknown.&ensp;You'll have a better read on her.&ensp;Or did she already
-give a bad vibe or..."&ensp;
+give a bad vibe or . . ."&ensp;
 <br/>&emsp;"Not for me," said coach.&ensp;
 <br/>&emsp;"She's friends with the cats," I said.&ensp;Breathe, be cool.&ensp;
 <br/>&emsp;"Let's go to the burger place," said the coach.&ensp;"I could go for their Chili Size."&ensp;
 <br/>&emsp;Mr. Fastback was parked best.&ensp;"You driving?" I asked him.&ensp;
-<br/>&emsp;He nodded, seemed disappointed that his freak-out was being short-circuited so soon.&ensp;As for the coach,
+<br/>&emsp;He nodded, seeming disappointed that his freak-out was being short-circuited so soon.&ensp;As for the coach,
 I don't think he had any real concerns.&ensp;He didn't really own anything worth stealing.&ensp;How much can you 
 get for a second-hand Speedo?&ensp;
 <br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spend the night.&ensp;
-Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, jealous, Mr. Fastback.&ensp;
-If you aren't having fun, no one can,  But as I turned the knob, I acknowledged his concerns.&ensp;
+Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
+If you aren't having fun, no one can,  But as I turned the knob, on another level I felt my own concerns.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
-<br/>&emsp;She and I got in the backseat of the Fastback.&ensp;There was a hole in the vinyl about the size of a
-silver-dollar revealing broken springs underneath.&ensp;
+<br/>&emsp;She and I climbed into the back of the Fastback.&ensp;There was a hole in the vinyl seat about the size of a
+dollar bill revealing the horizontal wavy seat springs, one of which had a missing section.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
-<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and my girfriend were, uh--"&ensp;
+<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and my ex were, uh--"&ensp;
 <br/>&emsp;"Getting heavy," the coach said.&ensp;
-<br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people...&ensp;
-with two people's weight, it was enough to..."&ensp;He was smirking and snorking by now.&ensp;
+<br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
+with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly started laughing.&ensp;A rich contralto, very infectious.&ensp;It went on for at least two blocks.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
