--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -338,17 +338,17 @@ come up pretty quick.&ensp;I mean, she's only been here one night--"&ensp;
 <br/>&emsp;"Is she staying tonight?" Fastback pressed.&ensp;
 <br/>&emsp;"Unless I'm going to take her to a hotel," I answered.&ensp;I checked myself again.&ensp;
 "Tell you what, guys.&ensp;Let's all go to dinner."&ensp;
-<br/>&emsp;The coach started nodding.&ensp;Dude burned tons of calories in the pool everyday.&ensp;
+<br/>&emsp;The coach started nodding.&ensp;Dude burned a million calories in the pool everyday.&ensp;
 <br/>&emsp;I went on:  "She'll be less of an unknown.&ensp;You'll have a better read on her.&ensp;Or did she already
 give a bad vibe or . . ."&ensp;
-<br/>&emsp;"Not for me," said coach.&ensp;
+<br/>&emsp;"Not for me," said the coach.&ensp;
 <br/>&emsp;"She's friends with the cats," I said.&ensp;Breathe, be cool.&ensp;
 <br/>&emsp;"Let's go to the burger place," said the coach.&ensp;"I could go for their Chili Size."&ensp;
 <br/>&emsp;Mr. Fastback was parked best.&ensp;"You driving?" I asked him.&ensp;
-<br/>&emsp;He nodded, seeming disappointed that his freak-out was being short-circuited so soon.&ensp;As for the coach,
+<br/>&emsp;He nodded, seeming disappointed his freak-out was being short-circuited so soon.&ensp;As for the coach,
 I don't think he had any real concerns.&ensp;He didn't really own anything worth stealing.&ensp;How much can you 
 get for a second-hand Speedo?&ensp;
-<br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spend the night.&ensp;
+<br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spent the night.&ensp;
 Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
 If you aren't having fun, no one can,  But as I turned the knob, on another level I felt my own concerns.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
