--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -2,7 +2,7 @@
 <body style="margin: 30px; margin-top: 30px;">
 <h3>Hot Pink Bikini</h3>
 <p/>
-<i> Feb. 2, 1987 </i>
+<i> Apr. 28, 1987 </i>
 <p/>
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;Ours was kind of strange.&ensp;It had a rather large kitchen with limited counter space,
@@ -51,7 +51,7 @@ thinking we really needed to put locks on the garage doors.&ensp;Less inconvenie
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
-<br/>&emsp;"Yep.&ensp;But I have a policy with motorcycles.&ensp;All the gear, every time."&ensp;
+<br/>&emsp;"Almost.&ensp;But I have a policy with motorcycles.&ensp;All the gear, every time."&ensp;
 <br/>&emsp;"Cautious," she said.&ensp;
 <br/>&emsp;"Gotta be.&ensp;Old cars drip oil at intersections, a braking hazard for sudden red lights."&ensp;
 At the back door of the house now.&ensp;"Drivers turn left in front of bikes all the time, more panic braking."&ensp;
@@ -66,7 +66,7 @@ the closet and turned to hand it to her.&ensp;
 <br/>&emsp;"Fred," I said, "shoo."&ensp;He did a lithe feline uey.&ensp;
 <br/>&emsp;I held out the jacket and she put it on.&ensp;The sleeves were long so I folded them back.&ensp;Then I handed
 her a pair of gloves which she made to pull on.&ensp;
-<br/>&emsp;"Uh," I said, "helmet first.&ensp;This was not a woman accustomed to the procedure.&ensp;Unless your gloves
+<br/>&emsp;"Uh," I said, "helmet first."&ensp;This was not a woman accustomed to the procedure.&ensp;Unless your gloves
 fit perfectly it's impossible to do up a helmet strap.&ensp;It became obvious the strap buckle was a 
 new thing too.&ensp;I'd given her the helmet that I guessed would fit best, and like many people, she had
 that look of surprise at the novelty, the change in sounds.&ensp;Doing the strap brought us close.&ensp;
