--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -26,8 +26,8 @@ bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;"How 'bout you?"&ensp;She raised her can.&ensp;
 <br/>&emsp;"I'm good for now."&ensp;
 <br/>&emsp;Her smile sprouted horns.&ensp;"Will you give me a ride?"&ensp;
-<br/>&emsp;Motorcycles did have a draw.&ensp;The trust in that had always baffled me.&ensp;But then, when guys
-give each other rides there's usually an attempt to wheelie and dump your friend.&ensp;It's in the
+<br/>&emsp;Motorcycles did draw women and this would momentarily baffle me because when a guy
+gives another guy a ride there was usually an attempt to wheelie and dump your friend.&ensp;It's in the
 Y chromosome rulebook somewhere.&ensp;
 <br/>&emsp;"Sure," I said.&ensp;Chivalry was also in the rulebook, at least towards women.&ensp;That meant that not
 only didn't you try to dump them on the road or trail, you tried to protect them.&ensp;And that meant gear.&ensp;
@@ -186,6 +186,7 @@ While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;It had taken me a while to figure out that I'm really more interested in cornering than straight line speed.&ensp;
 It had then taken some experimenting, wider wheels, various tires, sway bars, adjustable shocks, to get
 the big car to do what I wanted.&ensp;Labors of love are forever works in progress.&ensp;
+Passions are just one kind of trap we pay to get into, stay in.&ensp;
 <br/>&emsp;"Uhhhh!"&ensp;
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
